update sub title

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                             },
                             title: {
                                 text: 'Jumlah Penduduk Lampung',
-                                subtext: 'Sumber ngalor ngidul',
+                                subtext: 'Kanwil Kemenag Provinsi Lampung',
                                 left: 'right',
                             },
                             tooltip: { trigger: 'item' },
@@ -278,7 +278,7 @@
                             ],
                             title: {
                                 text: 'Jumlah Penduduk Lampung',
-                                subtext: 'Sumber ngalor ngidul',
+                                subtext: 'Kanwil Kemenag Provinsi Lampung',
                                 left: 'right',
                             },
                         };
