--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                 bottom: '10%',
                             },
                             title: {
-                                text: 'Jumlah Penduduk Lampung',
+                                text: 'Jumlah Kabupaten/Kota, Kecamatan, Kelurahan dan Luas Wilayah Tahun 2024',
                                 subtext: 'Kanwil Kemenag Provinsi Lampung',
                                 left: 'right',
                             },
@@ -277,7 +277,7 @@
                                 },
                             ],
                             title: {
-                                text: 'Jumlah Penduduk Lampung',
+                                text: 'Jumlah Kabupaten/Kota, Kecamatan, Kelurahan dan Luas Wilayah Tahun 2024',
                                 subtext: 'Kanwil Kemenag Provinsi Lampung',
                                 left: 'right',
                             },
